# pgplayground

./: .gitignore  CLAUDE.md  Dockerfile.base  Makefile.base  README.md  help.sh  pyproject.toml
features/00_template/: Makefile  README.md
features/fts/: Dockerfile  Makefile  README.md  init.sql  load_conference_data.py  queries.sql
features/indexes/: Makefile  init.sql
features/partitions/: Makefile
features/queues/: Makefile  init.sql  insert_tasks.py  process_tasks.py  queries.sql
features/stored_routines/: Dockerfile  Makefile  README.md  init.sql  queries.sql
features/vanilla/: Dockerfile  Makefile
features/vectors/: Makefile  insert_real_vectors.py  insert_simulated_vectors.py
indexes/: Makefile  README.md  queries.sql
partitions/: Makefile  README.md  init.sql  queries.sql
queues/: Makefile  insert_tasks.py  process_tasks.py
vectors/: .gitignore  Dockerfile  Makefile  init.sql  insert_real_vectors.py  insert_simulated_vectors.py  queries.sql
